Added Forge and NeoForge classes Added compatibility with Java 17 Changed metadata Added Russian translation